# AllHaven-Application

./: .env.example  .env.prod.example  .gitignore  CHANGELOG.md  README.md  START_HAVEN_LINUX.sh  START_HAVEN_WINDOWS.bat  allhaven.sh  docker-compose.prod.yml  docker-compose.yml  install.sh  package.json
08 CoreOS 0.8/: .env.example
1 CoreOS 0.2/: docker-compose.yml
1 CoreOS 0.9/: coreos.sh
14 AllHaven 1.4/: .env.prod.example
2 AllHaven 1.8/: LAUNCH_SECURITY_REPORT.md
2 AllHaven 2.2/: START_HAVEN_WINDOWS.bat
2 AllHaven 2.5/: START_HAVEN_LINUX.sh
2 AllHaven 2.8/: CHANGELOG.md
2 AllHaven 3.0/: CHANGELOG.md
2 AllHaven 3.1/: START_HAVEN_WINDOWS.bat
2 AllHaven 3.5/: .gitignore
2 AllHaven 3.5/backend/: pyproject.toml
2 AllHaven 3.5/backend/app/: main.py
2 AllHaven 3.5/backend/app/domain/: calendar.py
2 AllHaven 3.5/backend/app/schemas/: finance.py
2 AllHaven 3.5/backend/tests/: test_ai_knowledge.py
22 AllHaven 2.2/: START_HAVEN_MAC.command
24 AllHaven 2.4/: START_HAVEN_WINDOWS.bat
25 AllHaven 2.5/: CHANGELOG.md
27 AllHaven 2.7/: LICENSE
30 AllHaven 3.0/: README.md  package.json
31 AllHaven 3.1/: CHANGELOG.md
32 AllHaven 3.2/: CHANGELOG.md
34 AllHaven 3.3.1/: CHANGELOG.md  START_HAVEN_LINUX.sh  package.json
AllHaven 0.4/: .gitignore
AllHaven 0.9/: .env.example
AllHaven 1.3/: README.md
AllHaven 1.6/: CHANGELOG.md
AllHaven 1.7/: CHANGELOG.md
AllHaven 1.8/: CHANGELOG.md  README.md
AllHaven 2.0/: CHANGELOG.md  README.md
AllHaven 2.1/: START_HAVEN_LINUX.sh  allhaven.sh
AllHaven 2.2/: README.md
AllHaven 2.3/: README.md  (+3 more)
(+1328 files in other folders)
